<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".g1Activity"
    android:background="@color/purple_500">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-90"
        android:src="@drawable/gs1"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_gsholat"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="28dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1.Takbiratul Ihram"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/btn_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:backgroundTint="@color/green"
            android:text="Prev"/>
        <Button
            android:id="@+id/btn_n1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:text="Next"
            android:layout_marginLeft="118dp"/>
    </LinearLayout>
    <ToggleButton
        android:id="@+id/btn_s1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onToggleClicked"
        android:textOn="Play"
        android:textOff="Stop"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:backgroundTint="@color/green"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="20dp"/>
    <ScrollView
        android:layout_width="320dp"
        android:layout_height="259dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Doa Iftitah :"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iftitah1"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iftitah2"
                android:layout_gravity="right"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iftitah3"
                android:layout_gravity="right"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iftitah4"
                android:layout_gravity="right"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Artinya :"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/artiftitah"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Al-Fatihah :"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alfatihah"
                android:textSize="20dp"
                android:layout_gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Artinya :"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artiftitah"
                android:textStyle="italic"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Al-Iklhas :"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alikhlas"
                android:layout_gravity="right"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Artinya :"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artalikhlas"
                android:textStyle="italic"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
